# visual-novel-engine

./: .clang-format  .gitignore  .vimrc  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  VIM_SETUP.md  compile_commands.json  init.lua
assets/fonts/: README.md
include/: Character.h  DialogueSystem.h  Game.h  ResourceManager.h  SDLManager.h  SDLWrappers.h
src/: Character.cpp  DialogueSystem.cpp  Game.cpp  ResourceManager.cpp  main.cpp
